:art: :bug hotfix for column labels when collapsed

--- a/meta/hotfixes.css
+++ b/meta/hotfixes.css
@@ -34,3 +34,7 @@
 .btd-emoji-icon {
   transform: translateY(-2px);
 }
+
+.btd-on .btd-column-collapsed ul.btd-column-buttons.btd-column-buttons {
+  width: unset !important;
+}
