--- a/src/css/features/collapse-columns.css
+++ b/src/css/features/collapse-columns.css
@@ -30,7 +30,7 @@ html.btd-on {
     }
 
     ul.btd-column-buttons {
-      width: 100% !important;
+      width: auto;
       order: 0;
       position: relative;
       margin-left: 10px;
